paparazzogo/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: paparazzogo
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    # name: restreamer
